opLT dilation, linearity properties

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -253,7 +253,7 @@
   url          = {http://books.google.com/books?vid=ISBN1441904581},
   urlw         = {http://www.worldcat.org/isbn/1441904581},
   urla         = {http://www.amazon.com/dp/1441904581/},
-  isbn10       = {1441904581},  
+  isbn10       = {1441904581},
   isbn         = {9781441904584},
   edition      = {3},
   }
@@ -272,7 +272,7 @@
   urla         = {http://www.amazon.com/dp/0817648488/},
   isbn10       = {0817648488},
   }
-  
+
 @book{aubin2011,
   author       = {Jean-Pierre Aubin},
   title        = {Applied Functional Analysis},
@@ -289,7 +289,7 @@
   urla         = {http://www.amazon.com/dp/1118030974/},
   isbn10       = {1118030974},
   }
-  
+
 @book{bachman1964,
   author       = {George Bachman},
   institution  = {Polytechnic Institute of Brooklyn Department of Mathematics},
@@ -436,7 +436,7 @@
   urlw         = {http://www.worldcat.org/isbn/0387406271},
   urla         = {http://www.amazon.com/dp/0387406271},
   }
-  
+
 @book{bartle2001,
   author       = {Robert G. Bartle},
   title        = {A Modern Theory of Integration},
@@ -481,7 +481,7 @@
   urlw         = {http://www.worldcat.org/isbn/0821872311},
   urla         = {http://www.amazon.com/dp/0821872311},
   }
- 
+
 @book{beer1993,
   author       = {Gerald Beer},
   title        = {Topologies on Closed and Closed Convex Sets},
@@ -497,7 +497,7 @@
   urlw         = {http://www.worldcat.org/isbn/0792325311},
   urla         = {http://www.amazon.com/dp/0792325311},
   }
-  
+
 @incollection{benedetto,
   booktitle    = {Gabor Analysis and Algorithms: theory and applications},
   series       = {Applied and Numerical Harmonic Analysis},
@@ -573,7 +573,7 @@
 @article{besso1879,
   author       = {D. Besso},
   year         = {1879},
-  title        = {Teoremi elementari sui massimi i minimi}, 
+  title        = {Teoremi elementari sui massimi i minimi},
   journal      = {Annuari Ist. Tech. Roma},
   pages        = {7--24},
   note         = {see Bullen(2003) pages 453, 203},
@@ -718,8 +718,8 @@
   url          = {http://books.google.com/books?vid=ISBN0387945091},
   urlw         = {http://www.worldcat.org/isbn/0387945091},
   urla         = {http://www.amazon.com/dp/0387945091},
-  }  
-  
+  }
+
 @article{bouniakowsky1859,
   author       = {V. Bouniakowsky},
   year         = {1859},
@@ -829,7 +829,7 @@
   address      = {Cambridge},
   pages        = {112},
   }
-  
+
 @article{bullen1990,
   author       = {P. S. Bullen},
   title        = {Averages Still on the Move},
@@ -858,7 +858,7 @@
   url          = {http://books.google.com/books?vid=ISBN1402015224},
   urla         = {http://www.amazon.com/dp/1402015224},
   }
-  
+
 @article{bunyakovsky,
   author       = {Viktor Yakovlevich Bunyakovsky},
   journal      = {M/'emoires de L'Acad/'emie Imp/'eriale des Sciences de St.-P/'etersbourg},
@@ -910,7 +910,7 @@
   urla         = {http://www.amazon.com/dp/052160480X},
   language     = {English},
   }
-  
+
 @inproceedings{burstein2005,
   author       = {David Burstein and Igor Ulitsky and Tamir Tuller and Benny Chor},
   title        = {Information Theoretic Approaches to Whole Genome Phylogenies},
@@ -930,9 +930,9 @@
 @article{burt1983,
   author       = {Peter J. Burt and Edward H. Adelson},
   title        = {The Laplacian Pyramid As A Compact Image Code},
-  journal      = {IEEE Transactions On Communications}, 
+  journal      = {IEEE Transactions On Communications},
   volume       = {{\scshape com-3l}},
-  number       = {4}, 
+  number       = {4},
   month        = {April},
   year         = {1983},
   pages        = {532--540},
@@ -1006,7 +1006,7 @@
   urlw         = {http://www.worldcat.org/isbn/1461225604},
   urla         = {http://www.amazon.com/dp/1461225604},
   }
-  
+
 @book{callahan2010,
   isbn         = {9781441973320},
   isbn10       = {144197332X},
@@ -1185,7 +1185,7 @@
   urla         = {http://www.amazon.com/dp/9781441910011},
   urlw         = {http://www.worldcat.org/isbn/9781441910011},
   }
-  
+
 @book{chitode2009,
   author       = {J.S.Chitode},
   title        = {Signals And Systems},
@@ -1213,7 +1213,7 @@
   isbn         = {0-8176-4295-1},
   isbn13       = {9780817642952},
   }
-  
+
 @book{christensen2008,
   isbn10       = {0817646779},
   isbn         = {9780817646776},
@@ -1228,7 +1228,7 @@
   urla         = {http://www.amazon.com/dp/0817646779},
   urlw         = {http://www.worldcat.org/isbn/0817646779},
   }
-  
+
 @book{christensen2010,
   isbn10       = {0817649794},
   url          = {http://books.google.com/books?vid=ISBN0817649794},
@@ -1259,7 +1259,7 @@
   isbn         = {1461452570},
   isbn13       = {9781461452577},
   }
-  
+
 @article{clarkson1936,
   title        = {Uniformly Convex Spaces},
   author       = {James A. Clarkson},
@@ -1427,7 +1427,7 @@
 @book{crossley2006,
   author       = {Martin D. Crossley},
   title        = {Essential Topology},
-  series       = {Springer Undergraduate Mathematics Series}, 
+  series       = {Springer Undergraduate Mathematics Series},
   year         = {2006},
   publisher    = {Springer Science \& Business Media},
   pages        = {224},
@@ -1467,7 +1467,7 @@
 
 @book{davidson2010,
   author       = {Kenneth R. Davidson and Allan P. Donsig},
-  title        = {Real Analysis and Applications}, 
+  title        = {Real Analysis and Applications},
   year         = {2010},
   publisher    = {Springer},
   isbn10       = {1441900055},
@@ -1476,7 +1476,7 @@
   urlw         = {http://www.worldcat.org/isbn/1441900055},
   urla         = {http://www.amazon.com/dp/1441900055},
   }
-  
+
 @book{day,
   author       = {Mahlon Marsh Day},
   title        = {Normed Linear Spaces},
@@ -1529,7 +1529,7 @@
   isbn10       = {0080455921},
   isbn         = {9780080455921},
   }
-  
+
 @book{denkowski2003,
   title        = {An introduction to nonlinear analysis: applications},
   author       = {Zdzis{\l}aw Denkowski and Stanis{\l}aw Mig/'orski and Nikolaos Socrates Papageorgiou},
@@ -1732,7 +1732,7 @@
   }
 
 @incollection{drljevic1989,
-  author       = {Hamid Drljevi/'c}, 
+  author       = {Hamid Drljevi/'c},
   title        = {On the representation of functionals and the stability of mappings in Hilbert and Banach spaces},
   shorttitle   = {On the representation of functionals\ldots},
   pages        = {231--245},
@@ -1798,7 +1798,7 @@
   isbn13       = {978-08176-4672-1},
   pages        = {445},
   }
-  
+
 @book{dumitrescu2007,
   author       = {Bogdan Dumitrescu},
   title        = {Positive Trigonometric Polynomials and Signal Processing Applications},
@@ -1884,7 +1884,7 @@
 @book{eidelman2004,
   author       = {Yuli Eidelman and Vitali D. Milman and Antonis Tsolomitis},
   title        = {Functional Analysis: An Introduction},
-  series       = {Graduate Studies in Mathematics}, 
+  series       = {Graduate Studies in Mathematics},
   volume       = {66},
   year         = {2004},
   publisher    = {American Mathematical Society},
@@ -1932,7 +1932,7 @@
   volume       = {130},
   url          = {http://link.springer.com/content/pdf/10.1007/BF02392270},
   }
-  
+
 @book{euler1748v1,
   author       = {Leonhard Euler},
   title        = {Introductio in analysin infinitorum},
@@ -2010,7 +2010,7 @@
   isbn13       = {9781441975140},
   pages        = {820},
   }
-  
+
 @inproceedings{fagin2003p,
   author       = {Ronald Fagin and Ravi Kumar and D. Sivakumar},
   title        = {Comparing Top $k$ Lists},
@@ -2170,7 +2170,7 @@
   address      = {Paris, France},
   language     = {French},
   note         = {original paper at pages 58--70},
-  } 
+  }
 
 @book{fourier1822,
   author       = {Jean-Baptiste-Joseph Fourier},
@@ -2231,7 +2231,7 @@
   month        = {November 19},
   pages        = {249},
   }
-  
+
 @article{frechet1906,
   author       = {Maurice Ren/'e Fr/'echet},
   title        = {Sur quelques points du calcul fonctionnel
@@ -2419,7 +2419,7 @@
   url          = {http://books.google.com/books?vid=ISBN1441915451},
   urlw         = {http://www.worldcat.org/isbn/1441915451},
   urla         = {http://www.amazon.com/dp/1441915451},
-  } 
+  }
 
 @incollection{gao2011h,
   author       = {Robert X. Gao and Ruqiang Yan},
@@ -2435,7 +2435,7 @@
   urlw         = {http://www.worldcat.org/isbn/1441915451},
   urla         = {http://www.amazon.com/dp/1441915451},
   url          = {http://www.springer.com/cda/content/document/cda_downloaddocument/9781441915443-c1.pdf},
-  } 
+  }
 
 @book{gauss1900werke8,
   author       = {Carl Friedrich Gauss},
@@ -2447,7 +2447,7 @@
   address      = {G/:ottingen},
   language     = {German},
   }
-  
+
 @book{gelbaum1990,
   author       = {Bernard R. Gelbaum and John M. H. Olmsted},
   title        = {Theorems and Counterexamples in Mathematics},
@@ -2460,7 +2460,7 @@
   urlw         = {http://www.worldcat.org/isbn/1461209935},
   urla         = {http://www.amazon.com/dp/1461209935},
   }
-  
+
 @article{gelfand1941,
   author       = {Israel M. Gelfand},
   title        = {Normierte Ringe},
@@ -2647,7 +2647,7 @@
   }
 
 @book{grabiec2006,
-  author       = {Mariusz Grabiec and Yeol Je Cho and Viorel Radu},  
+  author       = {Mariusz Grabiec and Yeol Je Cho and Viorel Radu},
   title        = {On Nonsymmetric Topological and Probabilistic Structures},
   year         = {2006},
   publisher    = {Nova Publishers},
@@ -2780,7 +2780,7 @@
   edition      = {0.50},
   doi          = {10.13140/RG.2.2.33094.16965},
   }
-  
+
 @book{greenhoe2017sams,
   title        = {Structure and Analysis of Mathematical Spaces},
   series       = {Mathematical Structure and Design series},
@@ -2873,9 +2873,9 @@
   url          = {http://books.google.com/books?vid=ISBN9780828403214},
   urlw         = {http://www.worldcat.org/isbn/9780828403214},
   urla         = {http://www.amazon.com/dp/9780828403214},
-  
+
   }
- 
+
 @article{grossmann1984,
   author       = {A. Grossmann and J. Morlet},
   title        = {Decomposition of Hardy Functions into Square Integrable Wavelets of Constant Shape},
@@ -3098,7 +3098,7 @@
   urla         = {http://www.amazon.com/dp/0821842129},
   note         = {Deguang Han = \zhtzy{???}},
   }
-  
+
 @book{hardy1934,
   author       = {Godfrey Harold Hardy and John Edensor Littlewood and George P/'olya},
   title        = {Inequalities},
@@ -3181,7 +3181,7 @@
   url          = {http://books.google.com/books?vid=ISBN9781426949545},
   urla         = {http://www.amazon.com/dp/1426949545},
   }
-  
+
 @book{heinonen2001,
   author       = {Juha Heinonen},
   year         = {2001},
@@ -3245,7 +3245,7 @@
   urla         = {http://www.amazon.com/dp/0198596995},
   pages        = {240},
   }
-  
+
 @book{hijab2011,
   author       = {Omar Hijab},
   title        = {Introduction to Calculus and Classical Analysis},
@@ -3465,12 +3465,12 @@
   isbn         = {9810241917},
   isbn13       = {9789810241919},
   }
-  
+
 @book{hormander2003,
   title        = {The Analysis of Linear Partial Differential Operators I: Distribution Theory and Fourier Analysis},
   shorttitle   = {The Analysis of Linear Partial Differential Operators I\ldots},
   series       = {Classics in Mathematics},
-  year         = {2003}, 
+  year         = {2003},
   publisher    = {Springer},
   address      = {Berlin},
   author       = {Lars H/:omander},
@@ -3627,7 +3627,7 @@
   url          = {http://books.google.com/books?vid=ISBN0387233946},
   urlw         = {http://www.worldcat.org/isbn/0387233946},
   urla         = {http://www.amazon.com/dp/0387233946},
-  } 
+  }
 
 @book{jolley1961,
   author       = {Leonard Benjamin William Jolley},
@@ -3642,7 +3642,7 @@
   asin         = {B001N3H9TS},
   urla         = {http://www.amazon.com/dp/0486441601},
   }
-  
+
 @article{jordan1935,
   author       = {P. Jordan and J. von Neumann},
   title        = {On Inner Products in Linear, Metric Spaces},
@@ -3669,7 +3669,7 @@
   isbn         = {9780852264447},
   edition      = {1},
   }
-  
+
 @book{joshi2006,
   author       = {Kapli D. Joshi},
   year         = {2006},
@@ -3681,7 +3681,7 @@
   isbn         = {978-81-224-444-7},
   edition      = {revised},
   }
-  
+
 @book{jorgensen2008,
   author       = {Palle E. T. J{/!o}rgensen and Kathy Merrill and Judith Packer and Lawrence W. Baggett},
   title        = {Representations, Wavelets and Frames: A Celebration of the Mathematical Work of Lawrence Baggett},
@@ -3696,7 +3696,7 @@
   isbn10       = {0817646825},
   isbn         = {9780817646820},
   }
-  
+
 @book{kadets1997,
   author       = {Mikhail I. Kadets and Vladimir M. Kadets},
   title        = {Series in Banach Spaces: Conditional and Unconditional Convergence},
@@ -3712,7 +3712,7 @@
   urlw         = {http://www.worldcat.org/isbn/3764354011},
   urla         = {http://www.amazon.com/dp/3764354011},
   }
-  
+
 @article{kakutani1940,
   title        = {Some characterizations of Euclidean space},
   author       = {Shizuo Kakutani},
@@ -3754,7 +3754,7 @@
   urlw         = {http://www.worldcat.org/isbn/0521543592},
   urla         = {http://www.amazon.com/dp/0521543592},
   }
-  
+
 @book{kelley1955,
   author       = {John Leroy Kelley},
   editor       = {M.A. Stone and L. Nirenberg and S.S. Chern},
@@ -3987,7 +3987,7 @@
   isbn10       = {0123708990},
   isbn         = {9780123708991},
   }
-  
+
 @book{kubrusly2001,
   author       = {Carlos S. Kubrusly},
   year         = {2001},
@@ -4001,7 +4001,7 @@
   isbn10       = {0817641742},
   isbn         = {9780817641740},
   }
-  
+
 @book{kubrusly2011,
   author       = {Carlos S. Kubrusly},
   year         = {2011},
@@ -4015,7 +4015,7 @@
   isbn10       = {0817649972},
   isbn         = {9780817649975},
   }
-  
+
 @book{kurdila2005,
   author       = {Andrew Kurdila and Michael Zabarankin},
   title        = {Convex Functional Analysis},
@@ -4030,7 +4030,7 @@
   isbn10       = {3-7643-2198-9},
   isbn         = {9783764321987},
   }
-  
+
 @book{kurdila2006,
   author       = {Andrew Kurdila and Michael Zabarankin},
   title        = {Convex Functional Analysis},
@@ -4045,7 +4045,7 @@
   isbn10       = {3764373571},
   isbn         = {9783764373573},
   }
-  
+
 @book{laos1998,
   author       = {Nicolas K. Laos},
   title        = {Topics in Mathematical Analysis and Differential Geometry},
@@ -4060,7 +4060,7 @@
   urlw         = {http://www.worldcat.org/isbn/9810231806},
   urla         = {http://www.amazon.com/dp/9810231806},
   }
-  
+
 @book{lasser,
   author       = {Rupert Lasser},
   title        = {Introduction to Fourier Series},
@@ -4151,6 +4151,16 @@
   url          = {http://bibliothek.bbaw.de/bibliothek-digital/digitalequellen/schriften/anzeige/index_html?band=01-misc/1&amp;seite:int=184},
   }
 
+@book{levy1958,
+  author       = {Ezra C. Levy},
+  title        = {A New Table of Laplace Transformation Pairs},
+  year         = {1958},
+  month        = {November},
+  publisher    = {Space Technology Laboratories, Inc.},
+  address      = {P.O. Box 95001 Los Angeles 45, California},
+  note         = {``This Laplace transform table contains 1024 possible transformation pairs in nine sections.\ldots In this table we shall deal with the one-sided Laplace transformation, as contrasted to the two-sided transformation\ldots The reason for this choice is that for the systems that are most commonly considered the solution of interest is that corresponding to real values of time, and which assumes knowledge of the initial conditions, i. e. , the dynamic characteristics of the system at t = 0."},
+  }
+  
 @inproceedings{lin1998,
   author       = {Dekang Lin},
   title        = {An Information-Theoretic Definition of Similarity},
@@ -4171,7 +4181,7 @@
   url          = {http://books.google.com/books?vid=ISBN9780387763712},
   urla         = {http://www.amazon.com/dp/9780387763712},
   }
-  
+
 @book{loeve1977,
   title        = {Probability Theory I},
   volume       = {45},
@@ -4246,7 +4256,7 @@
   urlw         = {http://www.worldcat.org/isbn/3642665594},
   url          = {http://www.amazon.com/dp/3642665594},
   }
-  
+
 @article{liouville1839,
   author       = {J. Liouville},
   title        = {Sur l'integration d'une classe d'/'equations diff/'erentielles du second ordre en quantit/'es finies explicites},
@@ -4335,7 +4345,7 @@
   url          = {books.google.com/books?vid=ISBN052135868X},
   urla         = {http://www.amazon.com/dp/052135868X},
   }
-  
+
 @inproceedings{maleknejad2013,
   author       = {Khosrow Maleknejad and Monireh Nosrati Sahlan and Azadeh Ostad},
   title        = {Numerical Solution of Fractional Integro-differential Equation by Using Cubic B-spline Wavelets},
@@ -4364,7 +4374,7 @@
   url          = {http://gdz.sub.uni-goettingen.de/download/PPN362162050_0104/LOG_0008.pdf},
   publisher    = {Springer-Verlag},
   }
-  
+
 @article{maligranda1995,
   title        = {A Simple Proof of the H/:older and the Minkowski Inequality},
   author       = {Lech Maligranda},
@@ -4534,7 +4544,7 @@
   isbn10       = {0471458929},
   urlg         = {http://books.google.com/books?vid=ISBN0471458929},
   url          = {http://www.amazon.com/dp/0471458929},
-  }  
+  }
 
 @article{milovanovic1979,
   author       = {Gradimir V. Milovanovi/'c and Igor/vz. Milovanovi/'c},
@@ -4635,7 +4645,7 @@
   isbn10       = {8187504846},
   isbn         = {9788187504849},
   }
-  
+
 @book{munkres2000,
   author       = {James R. Munkres},
   institution  = {Massachusetts Institute of Technology},
@@ -4706,7 +4716,7 @@
   volume       = {4},
   url          = {https://books.google.com/books?id=KwV_mwEACAAJ},
   note         = {originally written in Portuguese circa 1950},
-  
+
   }
 
 @book{nagata1985,
@@ -4723,7 +4733,7 @@
   url          = {http://books.google.com/books?vid=ISBN0444876553},
   urla         = {http://www.amazon.com/dp/0444876553},
   }
-  
+
 @book{nahin2011,
   author       = {Paul J. Nahin},
   title        = {Dr. Euler's Fabulous Formula: Cures Many Mathematical Ills},
@@ -4738,7 +4748,7 @@
   url          = {http://books.google.com/books?vid=ISBN1400838479},
   urla         = {http://www.amazon.com/dp/1400838479},
   }
-  
+
 @book{narici1971,
   author       = {Lawrence Narici},
   title        = {Functional Analysis and Valuation Theory},
@@ -4754,7 +4764,7 @@
   url          = {http://books.google.com/books?vid=ISBN0824714849},
   urla         = {http://www.amazon.com/dp/0824714849},
   }
-  
+
 @article{nashed1991,
   title        = {General sampling theorems for functions in reproducing kernel Hilbert spaces},
   author       = {M. Zuhair Nashed and Gilbert G. Walter},
@@ -4949,7 +4959,7 @@
   author       = {Karl Pearson},
   title        = {On lines and planes of closest fit to systems of points in space},
   journal      = {Philosophical Magazine},
-  volume       = {2}, 
+  volume       = {2},
   pages        = {559--572},
   year         = {1901},
   url          = {https://doi.org/10.1080/14786440109462720},
@@ -4970,7 +4980,7 @@
   url          = {http://books.google.com/books?vid=ISBN0125492502},
   urla         = {http://www.amazon.com/dp/0125492502},
   }
-  
+
 @book{pedersen2000,
   author       = {Michael Pedersen},
   title        = {Functional Analysis in Applied Mathematics and Engineering},
@@ -5037,7 +5047,7 @@
   url          = {http://books.google.com/books?vid=ISBN3540407146},
   urla         = {http://www.amazon.com/dp/3540407146},
   pages        = {301},
-  }  
+  }
 
 @book{protter2012,
   isbn10       = {1461210860},
@@ -5058,7 +5068,7 @@
   author       = {Pao-Ming Pu and Ying-Ming Liu},
   year         = {1980},
   title        = {Fuzzy Topology I. Neighborhood Structure of a Fuzzy Point and Moore-Smith Convergence},
-  journal      = {Journal of Mathematical Analysis and Applications},  
+  journal      = {Journal of Mathematical Analysis and Applications},
   pages        = {571--599},
   volume       = {76},
   number       = {2},
@@ -5097,7 +5107,7 @@
   urlw         = {http://www.worldcat.org/isbn/0849317177},
   urla         = {http://www.amazon.com/dp/0849317177},
   }
-  
+
 @book{qian1996,
   title        = {Joint time-frequency analysis: methods and applications},
   author       = {Shie Qian and Dapang Chen},
@@ -5110,7 +5120,7 @@
   urlw         = {http://www.worldcat.org/isbn/0132543842},
   urla         = {http://www.amazon.com/dp/0132543842},
   }
-  
+
 @book{rana2002,
   author       = {Inder K. Rana},
   title        = {An Introduction to Measure and Integration},
@@ -5160,7 +5170,7 @@
   urla         = {http://www.amazon.com/dp/1475740131},
   language     = {English},
   }
-  
+
 @book{reyna2002,
   author       = {Juan-Arias de Reyna},
   title        = {Pointwise Convergence of Fourier Series},
@@ -5176,7 +5186,7 @@
   isbn         = {3540432701},
   isbn13       = {9783540432708},
   }
-  
+
 @book{rickart1960,
   author       = {Charles Earl Rickart},
   institution  = {Princeton},
@@ -5272,7 +5282,7 @@
   url          = {http://books.google.com/books?vid=ISBN0521624916},
   urlw         = {http://www.worldcat.org/isbn/0521624916},
   urla         = {http://www.amazon.com/dp/0521624916},
-  }  
+  }
 
 @book{rolewicz1985,
   author       = {Stefan Rolewicz},
@@ -5288,7 +5298,7 @@
   urla         = {http://www.amazon.com/dp/9027714800},
   pages        = {476},
   }
-  
+
 @book{rosenlicht,
   author       = {Maxwell Rosenlicht},
   title        = {Introduction to Analysis},
@@ -5386,8 +5396,8 @@
   url          = {http://books.google.com/books?vid=ISBN3642162215},
   urlw         = {http://www.worldcat.org/isbn/3642162215},
   urla         = {http://www.amazon.com/dp/3642162215},
-  }  
-  
+  }
+
 @article{ribeiro1943,
   author       = {Hugo Ribeiro},
   title        = {Sur les espaces /`a m/'etrique faible},
@@ -5400,7 +5410,7 @@
   url          = {https://eudml.org/doc/114615},
   language     = {French},
   }
-  
+
 @book{richardson2009,
   author       = {Leonard F. Richardson},
   title        = {Measure and Integration: A Concise Introduction to Real Analysis},
@@ -5543,7 +5553,7 @@
   urlw         = {http://www.worldcat.org/isbn/0691015864},
   urla         = {http://www.amazon.com/dp/0691015864},
   }
-  
+
 @book{runda2005,
   author       = {Volker Runda},
   title        = {A Taste of Topology},
@@ -5555,7 +5565,7 @@
   urla         = {http://www.amazon.com/dp/038725790X},
   isbn10       = {038725790X},
   isbn         = {978038725790},
-  }  
+  }
 
 @book{rynne2008,
   author       = {Bryan P. Rynne and Martin A. Youngson},
@@ -5575,11 +5585,11 @@
 
 @book{salzmann2007,
   author       = {H. Salzmann and T. Grundh/:ofer and H. H/:ahl and R. L/:owen},
-  title        = {The Classical Fields: Structural Features of the Real and Rational Numbers}, 
+  title        = {The Classical Fields: Structural Features of the Real and Rational Numbers},
   year         = {2007},
   publisher    = {Cambridge University Press},
   volume       = {112},
-  series       = {Encyclopedia of Mathematics and its Applications},    
+  series       = {Encyclopedia of Mathematics and its Applications},
   isbn         = {9780521865166},
   isbn10       = {0521865166},
   pages        = {401},
@@ -5587,7 +5597,7 @@
   urlw         = {http://www.worldcat.org/isbn/0521865166},
   urla         = {http://www.amazon.com/dp/0521865166},
   }
- 
+
 @article{schauder1927,
   author       = {Juljusz Schauder},
   title        = {Zur Theorie stetiger Abbildungen in Funktionalr/:aumen},
@@ -5619,12 +5629,12 @@
   publisher    = {Springer},
   pages        = {346},
   isbn10       = {0387987266},
-  isbn         = {9780387987262}, 
+  isbn         = {9780387987262},
   url          = {http://books.google.com/books?vid=ISBN0387987266},
   urlw         = {http://www.worldcat.org/isbn/0387987266},
   urla         = {http://www.amazon.com/dp/0387987266},
   }
-  
+
 @book{schechter1996,
   isbn10       = {0080532993},
   author       = {Eric Schechter},
@@ -5637,7 +5647,7 @@
   urlw         = {http://www.worldcat.org/isbn/0080532993},
   urla         = {http://www.amazon.com/dp/0080532993},
   }
-  
+
 @book{schechter2002,
   author       = {Martin Schechter},
   title        = {Principles of Functional Analysis},
@@ -5653,7 +5663,7 @@
   isbn         = {9780821828953},
   lccn         = {98053842},
   }
-  
+
 @book{schwarz,
   author       = {Karl Hermann Amandus Schwarz},
   title        = {Ueber Ein Die Flachen Kleinsten Fl/:acheninhalts;
@@ -5707,7 +5717,7 @@
   urlw         = {http://www.worldcat.org/isbn/0444006664},
   urla         = {http://www.amazon.com/dp/0444006664},
   }
-  
+
 @article{sherstnev1962,
   author       = {A. N. Sherstnev},
   title        = {Random normed spaces. Questions of completeness},
@@ -5751,7 +5761,7 @@
   urlw         = {http://www.worldcat.org/isbn/0198537352},
   urla         = {http://www.amazon.com/dp/0198537352},
   }
-   
+
 @book{swartz1994,
   author       = {Charles Swartz},
   title        = {Measure, Integration and Function Spaces},
@@ -5764,7 +5774,7 @@
   urlw         = {http://www.worldcat.org/isbn/9810216106},
   urla         = {http://www.amazon.com/dp/9810216106},
   }
-  
+
 @book{schubring2005,
   author       = {Gert Schubring},
   title        = {Conflicts Between Generalization, Rigor, and Intuition: Number Concepts Underlying the Development of Analysis in 17th--19th Century France and Germany},
@@ -5837,14 +5847,14 @@
   urla         = {http://www.amazon.com/dp/9401794545},
   title        = {Spectral Methods in Chemistry and Physics: Applications to Kinetic Theory and Quantum Mechanics},
   series       = {Scientific Computation},
-  author       = {Bernard Shizgal}, 
+  author       = {Bernard Shizgal},
   year         = {2015},
   pages        = {415},
   publisher    = {Springer},
   month        = {January 7},
   isbn         = {9789401794541},
   }
-  
+
 @inproceedings{silver2007,
   author       = {Judith Silver and Erik Stokes},
   title        = {A Great Circle Metric},
@@ -5881,7 +5891,7 @@
 
 @book{sohrab2003,
   author       = {Houshang H. Sohrab},
-  title        = {Basic Real Analysis}, 
+  title        = {Basic Real Analysis},
   year         = {2003},
   publisher    = {Birkh/:auser},
   address      = {Boston},
@@ -5903,7 +5913,7 @@
   volume       = {180},
   year         = {1998},
   publisher    = {Springer},
-  month        = {April 13}, 
+  month        = {April 13},
   pages        = {261},
   url          = {http://books.google.com/books?vid=ISBN0387984127},
   urlw         = {http://www.worldcat.org/isbn/0387984127},
@@ -5911,7 +5921,7 @@
   isbn10       = {0387984127},
   isbn         = {9780387984124},
   }
-  
+
 @article{steen1973,
   author       = {Lynn Arthur Steen},
   title        = {Highlights in the History of Spectral Theory},
@@ -5956,7 +5966,7 @@
   url          = {http://books.google.com/books?vid=ISBN1133112765},
   urla         = {http://www.amazon.com/dp/1133112765},
   }
-  
+
 @book{stoer2002,
   isbn         = {9780387954523},
   isbn10       = {038795452X},
@@ -6030,7 +6040,7 @@
   editor       = {W. Beckner, et al.},
   series       = {Wadsworth math series},
   }
-  
+
 @incollection{stromberg1982r,
   author       = {Jan-Olov Str/:omberg},
   title        = {A modified Franklin system and higher order splines as unconditional basis for Hardy spaces},
@@ -6091,7 +6101,7 @@
   url          = {http://books.google.com/books?vid=ISBN0521847672},
   urlw         = {http://www.worldcat.org/isbn/0521847672},
   urla         = {http://www.amazon.com/dp/0521847672},
-  }  
+  }
 
 @book{suli2003,
   author       = {Endre S/:uli and David F. Mayers},
@@ -6105,7 +6115,7 @@
   url          = {http://books.google.com/books?vid=ISBN0521007941},
   urlw         = {http://www.worldcat.org/isbn/0521007941},
   urla         = {http://www.amazon.com/dp/0521007941},
-  } 
+  }
 
 @article{sundaresan1973,
   title        = {T-orthogonality and nonlinear functionals on topological vector spaces},
@@ -6131,8 +6141,8 @@
   url          = {http://books.google.com/books?vid=ISBN0198531613},
   urlw         = {http://www.worldcat.org/isbn/0198531613},
   urla         = {http://www.amazon.com/dp/0198531613},
-  } 
-  
+  }
+
 @book{szasz1952,
   title        = {Introduction to the Theory of Divergent Series},
   author       = {Otto Sz/'asz and Joshua Barlaz},
@@ -6199,7 +6209,7 @@
 @book{tao2010,
   title        = {Epsilon of Room, I: Real Analysis: pages from year three of a mathematical blog},
   shorttitle   = {Epsilon of Room, I\ldots},
-  author       = {Terence Tao},  
+  author       = {Terence Tao},
   year         = {2010},
   publisher    = {American Mathematical Society},
   pages        = {349},
@@ -6211,10 +6221,10 @@
   urlw         = {http://www.worldcat.org/isbn/0821852787},
   urla         = {http://www.amazon.com/dp/0821852787},
   }
-  
+
 @book{tao2011,
   title        = {An Introduction to Measure Theory},
-  author       = {Terence Tao},  
+  author       = {Terence Tao},
   year         = {2011},
   publisher    = {American Mathematical Society},
   pages        = {206},
@@ -6226,7 +6236,7 @@
   urlw         = {http://www.worldcat.org/isbn/0821869191},
   urla         = {http://www.amazon.com/dp/0821869191},
   }
-  
+
 @book{terras1999,
   author       = {Audrey Terras},
   title        = {Fourier Analysis on Finite Groups and Applications},
@@ -6311,7 +6321,7 @@
   url          = {http://books.google.com/books?vid=ISBN0792330021},
   urla         = {http://www.amazon.com/dp/0792330021},
   }
-  
+
 @article{vaisala2003,
   title        = {A Proof of the Mazur-Ulam Theorem},
   author       = {Jussi V/:ais/:al/:a},
@@ -6480,7 +6490,7 @@
   year         = {2006},
   volume       = {13},
   pages        = {577--584},
-  }  
+  }
 
 @book{wells1987,
   isbn         = {9780140080292},
@@ -6530,7 +6540,7 @@
   volume       = {43},
   author       = {Richard L. Wheeden, Antoni Zygmund},
   year         = {1977},
-  publisher    = {Marcel Dekker}, 
+  publisher    = {Marcel Dekker},
   address      = {New York$\cdot$Basel},
   pages        = {274},
   isbn10       = {0824764994},
@@ -6538,7 +6548,7 @@
   url          = {http://books.google.com/books?vid=ISBN0824764994},
   urla         = {http://www.amazon.com/dp/0824764994},
   }
-  
+
 @article{whittaker1915,
   title        = {On the functions which are represented by the expansions of the interpolation theory},
   author       = {Edmund Taylor Whittaker},
@@ -6617,7 +6627,7 @@
   urla         = {http://www.amazon.com/dp/0486434796},
   note         = {a 2004 Dover edition has been published which ``is an unabridged republication of the work originally published by the Addison-Wesley Publishing Company \ldots 1970"}
   }
-  
+
 @book{willard2004,
   author       = {Stephen Willard},
   title        = {General Topology},
@@ -6684,7 +6694,7 @@
   url          = {http://link.springer.com/article/10.1007/s12220-008-9065-4},
   publisher    = {Springerlink.com},
   }
-  
+
 @book{yeh2006,
   author       = {J. Yeh},
   title        = {Real Analysis: Theory of Measure And Integration},
@@ -6697,7 +6707,7 @@
   isbn10       = {9812566538},
   isbn         = {9789812566539},
   }
-    
+
 @book{yosida1980,
   title        = {Functional Analysis},
   author       = {K/<osaku Yosida},
@@ -6743,7 +6753,7 @@
   isbn         = {0127728503},
   isbn13       = {9780127728506},
   }
-  
+
 @book{young2001,
   author       = {Robert M. Young},
   title        = {An introduction to nonharmonic Fourier series},
@@ -6760,7 +6770,7 @@
   isbn         = {0127729550},
   isbn13       = {9780127729558},
   }
-  
+
 @article{zak1967,
   author       = {J. Zak},
   title        = {Finite Translations in Solid-State Physics},
@@ -6814,7 +6824,7 @@
   month        = {June 12},
   pages        = {245},
   }
-  
+
 @book{zorich2004,
   author       = {Vladimir A. Zorich},
   title        = {Mathematical Analysis I},
@@ -6830,7 +6840,7 @@
   url          = {http://books.google.com/books?vid=ISBN3540403868},
   urla         = {http://www.amazon.com/dp/3540403868},
   }
- 
+
 @incollection{zygmund1968v1,
   author       = {Antoni Zygmund},
   title        = {Trigonometric Series Volume I},
@@ -6847,7 +6857,7 @@
   url          = {http://books.google.com/books?vid=ISBN0521890535},
   urla         = {http://www.amazon.com/dp/0521890535},
   }
-  
+
 @incollection{zygmund1968v2,
   author       = {Antoni Zygmund},
   title        = {Trigonometric Series Volume II},
@@ -6863,5 +6873,5 @@
   publisher    = {Cambridge University Press},
   address      = {London/New York/Melbourne},
   }
-  
+
 
