--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -1164,10 +1164,10 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
   \url{https://math.stackexchange.com/questions/4015842/}
   }
 %-------------------------------------
-\exbox{
+\exbox{\begin{array}{>{\ds}rc>{\ds}l}
   \opFT\brs{e^{-\alpha\abs{x}}}
-  = \frac{1}{\sqrt{2\pi}}\brs{\frac{2\alpha}{\alpha^2+\omega^2}}
-  }
+    &=& \frac{1}{\sqrt{2\pi}}\brs{\frac{2\alpha}{\alpha^2+\omega^2}}
+\end{array}}
 \end{example}
 \begin{proof}
 \begin{align*}
