--- a/common/laplace.tex
+++ b/common/laplace.tex
@@ -51,14 +51,14 @@ Let $\fG(s)\eqd \brs{\opLT\fg(x)}$
 and $\fF(s)\eqd \brs{\opLT\ff(x)}$. 
 Let the \structe{radius of convergence} of $\fG(s)$ be $A\leq\Real(s)\leq B$
 and the \structe{radius of convergence} of $\fF(s)$ be $C\leq\Real(s)\leq D$.
-\thmbox{\begin{array}{>{\ds}lc>{\ds}llclCD}
-    \mc{3}{N}{Transform}                                                                & \mc{3}{|N}{Radius of Convergence}                                     & \mc{1}{|N}{Domain}    & \mc{1}{|N}{Property}
+\thmbox{\begin{array}{>{\ds}lc>{\ds}lDrllCD}
+    \mc{3}{N}{Transform}                                                                & \mc{4}{|N}{Radius of Convergence}                                     & \mc{1}{|N}{Domain}    & \mc{1}{|N}{Property}
   \\\hline
-  \\\opLT\brs{\fg(x-\alpha)}        &=& e^{-\alpha s} \;\fG(s)                          & A              &\leq\Real(s)\leq                    & B               & \forall x,\alpha\in\C & (translation)
-  \\\opLT\brs{e^{-\alpha x} \fg(x)} &=& \fG(s+\alpha)                                   & A-\Real(\alpha)&\leq\Real(s)\leq                    & B-\Real(\alpha) & \forall x,\alpha\in\C & (modulation)
-  \\\opLT\brs{\fg(\alpha x)}        &=& \frac{1}{\abs{\alpha}}\fG\brp{\frac{s}{\alpha}} & A              &\leq\Real\brp{\frac{s}{\alpha}}\leq & B               & \forall x,\alpha\in\C & (dilation)  
-  \\\opLT\brs{\ff(x)+\fg(x)}        &=& \fF(s) + \fG(s)                                 & \max(A,B)      &\leq\Real(s)\leq                    & \min(A,B)       & \forall x,\alpha\in\C & (\prope{additive})
-  \\\opLT\brs{\alpha\fg(x)}         &=& \alpha\fG(s)                                    & A              &\leq\Real(s)\leq                    & B               & \forall x,\alpha\in\C & (\prope{homogeneous})
+    \opLT\brs{\fg(x-\alpha)}        &=& e^{-\alpha s} \;\fG(s)                          & for & A              &\leq\Real(s)                    & \leq B               & \forall x,\alpha\in\C & (translation)
+  \\\opLT\brs{e^{-\alpha x} \fg(x)} &=& \fG(s+\alpha)                                   & for & A-\Real(\alpha)&\leq\Real(s)                    & \leq B-\Real(\alpha) & \forall x,\alpha\in\C & (modulation)
+  \\\opLT\brs{\fg(\alpha x)}        &=& \frac{1}{\abs{\alpha}}\fG\brp{\frac{s}{\alpha}} & for & A              &\leq\Real\brp{\frac{s}{\alpha}} & \leq B               & \forall x,\alpha\in\C & (dilation)  
+  \\\opLT\brs{\ff(x)+\fg(x)}        &=& \fF(s) + \fG(s)                                 & for & \max(A,C)      &\leq\Real(s)                    & \leq \min(B,D)       & \forall x,\alpha\in\C & (\prope{additive})
+  \\\opLT\brs{\alpha\fg(x)}         &=& \alpha\fG(s)                                    & for & A              &\leq\Real(s)                    & \leq B               & \forall x,\alpha\in\C & (\prope{homogeneous})
 \end{array}}
 \end{theorem}
 \begin{proof}
